# WebRTCSFU

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  index.html
.github/workflows/: go.yml
cmake/: CMakeDetermineGoCompiler.cmake  golang.cmake
peer/: CMakeLists.txt  go.mod  go.sum  log.go  main.go  packet.go  priority_lock.go  proxy_connection.go  reader.go  signaling.go  transcoder.go
sfu/: CMakeLists.txt  go.mod  go.sum  log.go  main.go  sequence_number_interceptor.go
